fix(fieldset): stretch test
Closes #2436

--- a/src/components/10-atoms/fieldset/index.scss
+++ b/src/components/10-atoms/fieldset/index.scss
@@ -30,7 +30,7 @@ axa-fieldset {
   }
 
   &[horizontal="stretch"]{
-    @media (max-width: $breakpoint-xs - .1) {
+    @media (max-width: $breakpoint-xs - .01) {
       > *,
       > * > * {
         margin-right: 0;
